[gd_scene load_steps=5 format=3 uid="uid://bao5txln7ilob"]

[ext_resource type="Script" uid="uid://o1ibloey3kys" path="res://start_screen.gd" id="1_afy8x"]
[ext_resource type="Texture2D" uid="uid://bdua706pxp3cx" path="res://building assets/cat cafe/traffic-city-urban-skyscraper-building-cityscape-view-flat-design-vector.jpg" id="2_k1na2"]
[ext_resource type="AudioStream" uid="uid://btwpio5ff41u0" path="res://building assets/cat cafe/8 - Melancholic flavors.mp3" id="3_vdywr"]

[sub_resource type="SystemFont" id="SystemFont_k1na2"]

[node name="start_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afy8x")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k1na2")

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 31.0
offset_right = 788.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 72
text = "CITY HUSTLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HowToPlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 255.0
offset_right = 707.0
offset_bottom = 314.0
theme_override_fonts/font = SubResource("SystemFont_k1na2")
theme_override_font_sizes/font_size = 37
text = "How To Play
"

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 468.0
offset_top = 340.0
offset_right = 710.0
offset_bottom = 399.0
theme_override_fonts/font = SubResource("SystemFont_k1na2")
theme_override_font_sizes/font_size = 37
text = "Start Journey"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 478.0
offset_top = 420.0
offset_right = 720.0
offset_bottom = 479.0
theme_override_fonts/font = SubResource("SystemFont_k1na2")
theme_override_font_sizes/font_size = 37
text = "Quit
"

[node name="HowToPlayPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.047000002
anchor_bottom = 0.062000003
offset_left = 63.0
offset_top = 45.0
offset_right = 342.856
offset_bottom = 566.824

[node name="Label" type="Label" parent="HowToPlayPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "playing instrctions
"

[node name="BackButton" type="Button" parent="HowToPlayPanel"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vdywr")
autoplay = true
